fix title spacing

--- a/synth-search/src/components/SearchPanel/SearchPanel.module.sass
+++ b/synth-search/src/components/SearchPanel/SearchPanel.module.sass
@@ -22,6 +22,7 @@
     font-family: var(--title-font-family)
     font-size: var(--title-font-size)
     font-weight: var(--title-font-weight)
+    line-height: var(--title-line-height)
     margin: 0
     text-align: center
     background: var(--title-gradient)
